--- a/src/App.css
+++ b/src/App.css
@@ -327,7 +327,7 @@
   border-radius: 5px;
   position: absolute;
   z-index: 10;
-  top: 100px;
+  top: 150px;
   left: 10px;
   border: 1px solid black;
   background-color: white;
@@ -390,7 +390,17 @@
   height: 690px;
   width: 100%;
   position: absolute;
+  padding-top: 80px;
 }
+
+.event-post-box {
+  overflow: auto;
+  height: 690px;
+  width: 100%;
+  position: absolute;
+  /* padding-top: 50px; */
+}
+
 .forum-post-background {
   background-image: url("https://s3.amazonaws.com/eventbrite-s3/marketing/landingpages/assets/photography/distribution-header-footer.jpg");
   opacity: 0.5;
@@ -1702,12 +1712,12 @@ font-size: 14px;
 
 .forum-modal-close-button {
   background-color: #15172b;
-  bottom: 325px;
-  position: relative;
+  bottom: 620px;
+  position: absolute;
   border: 2px solid white;
   color: white;
   border-radius: 200px;
-  left: 355px;
+  left: 1000px;
   transition: all 0.2s;
 }
 
@@ -2333,3 +2343,79 @@ p.morning {
   box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(71, 155, 239, 0.5), .125rem .125rem 1rem rgba(71, 155, 239, 0.5);
 }
 
+.add-lease-info-button {
+  background-color: #12121200;
+  border: 2px solid white;
+  color: white;
+  border-radius: 5px;
+  font-size: 20px;
+  position: absolute;
+  right: 0px;
+  transition: all 0.2s ;
+}
+
+.add-lease-info-button:hover {
+  background-color: rgba(255, 255, 255, 0.489);
+  cursor: pointer;
+}
+
+
+
+/* CSS */
+.button-61 {
+  align-items: center;
+  appearance: none;
+  border-radius: 4px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 1px -2px,rgba(0, 0, 0, .14) 0 2px 2px 0,rgba(0, 0, 0, .12) 0 1px 5px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: Roboto,sans-serif;
+  font-size: .875rem;
+  font-weight: 500;
+  height: 20px;
+  justify-content: center;
+  letter-spacing: .0892857em;
+  line-height: normal;
+  min-width: 64px;
+  outline: none;
+  overflow: visible;
+  padding: 0 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  will-change: transform,opacity;
+}
+
+.button-61:hover {
+  box-shadow: rgba(0, 0, 0, .2) 0 2px 4px -1px, rgba(0, 0, 0, .14) 0 4px 5px 0, rgba(0, 0, 0, .12) 0 1px 10px 0;
+}
+
+.button-61:disabled {
+  background-color: rgba(0, 0, 0, .12);
+  box-shadow: rgba(0, 0, 0, .2) 0 0 0 0, rgba(0, 0, 0, .14) 0 0 0 0, rgba(0, 0, 0, .12) 0 0 0 0;
+  color: rgba(0, 0, 0, .37);
+  cursor: default;
+  pointer-events: none;
+}
+
+.button-61:not(:disabled) {
+  background-color: #6200ee;
+}
+
+.button-61:focus {
+  box-shadow: rgba(0, 0, 0, .2) 0 2px 4px -1px, rgba(0, 0, 0, .14) 0 4px 5px 0, rgba(0, 0, 0, .12) 0 1px 10px 0;
+}
+
+.button-61:active {
+  box-shadow: rgba(0, 0, 0, .2) 0 5px 5px -3px, rgba(0, 0, 0, .14) 0 8px 10px 1px, rgba(0, 0, 0, .12) 0 3px 14px 2px;
+  background: #A46BF5;
+}
